--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 boundedBuffer.exe
-savingAccount.exe
-unisexBathroom.exe
+savingAccountA.exe
+savingAccountB.exe
+unisexBathroomA.exe
+unisexBathroomB.exe
